# Hackathon

./: README.md
backend/: env_test.py  pyproject.toml  requirements.txt
backend/agents/: graph.py  nodes.py  prompts.py  state.py
backend/app/: main.py  schemas.py
backend/app/api/: router.py
backend/services/: tools.py
backend/travel_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/utils/: parsers.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.jsx  App.tsx  index.css  index.jsx  main.tsx
frontend/src/auth/: AuthContext.jsx  GoogleAuth.js
frontend/src/components/: About.css  About.jsx  Chatbot.css  Chatbot.jsx  Footer.css  Footer.jsx  Header.css  Header.jsx  Hero.css  Hero.jsx  ItineraryDisplay.tsx  Sidebar.tsx
frontend/src/components/map/: Map.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  Loader.tsx
frontend/src/lib/: types.ts
frontend/src/services/: api.ts
